--- a/index.html
+++ b/index.html
@@ -107,28 +107,49 @@
           <div class="job">
             <h3>Graphic Designer</h3>
             <p>
-              &nbsp&nbsp&nbsp&nbsp&nbspI can use programs like Adobe Photoshop,
-              Adobe Illustrator, Adobe Premiere Pro, Adobe After Effects, Maxon
-              Cinema 4D, SketchUp 2023, AutoCAD.
+              Proficient in industry-standard design and editing software, with
+              strong creative and technical skills in both 2D and 3D design.
+              Experienced in visual communication, video editing, and
+              architectural visualization.
+            </p>
+            <b>Software Skills:</b>
+            <p>
+              <b>Graphic Design:</b> Adobe Photoshop, Adobe Illustrator <br />
+              <b>Video Editing &Motion Graphics:</b> Adobe Premiere Pro, Adobe
+              After Effects <br />
+              <b>3D Modeling & Animation:</b> Maxon Cinema 4D, SketchUp 2023
+              <br />
+              <b>Architectural Design:</b> AutoCAD
             </p>
           </div>
           <div class="job">
             <h3>Web Developer</h3>
             <p>
-              • I can write website using HTML / CSS, JavaScript <br />• Create
-              product management using PHP <br />• Create Projects management
-              system using PHP Laravel
+              Skilled in front-end and back-end web development, with experience
+              building responsive websites, product management systems, and
+              project management platforms using modern technologies. <br />
+              <b>Key Skills & Responsibilities:</b><br />
+              • Developed websites using HTML / CSS and JavaScript for
+              responsive and user-friendly interfaces <br />
+              • Built product management systems using PHP with structured
+              database integration <br />
+              • Created project management systems using the Laravel PHP
+              framework, following MVC architecture and RESTful principles
             </p>
           </div>
-          <div class="job">
+          <!-- <div class="job">
             <h3>Database</h3>
             <p>
-              &nbsp&nbsp&nbsp&nbsp&nbspI have learned many databases such as SQL
-              Server, MySQL server, Oracle Server, so I can use these databases,
-              such as writing queries, creating tables, displaying data from
-              tables.
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have gained solid experience in
+              working with various database management systems such as SQL
+              Server, MySQL Server, and Oracle Server. I am capable of
+              performing a wide range of database operations including writing
+              SQL queries, creating and modifying tables, managing relationships
+              between tables, and retrieving and displaying data effectively. My
+              knowledge allows me to design efficient database structures and
+              ensure data integrity within systems I develop or maintain.
             </p>
-          </div>
+          </div> -->
         </section>
       </main>
     </div>
