--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
           <div class="job">
             <h3>Graphic Designer</h3>
             <p>
-              Proficient in industry-standard design and editing software, with
-              strong creative and technical skills in both 2D and 3D design.
-              Experienced in visual communication, video editing, and
-              architectural visualization.
+              &nbsp&nbsp&nbsp&nbsp&nbspProficient in industry-standard design
+              and editing software, with strong creative and technical skills in
+              both 2D and 3D design. Experienced in visual communication, video
+              editing, and architectural visualization.
             </p>
             <b>Software Skills:</b>
             <p>
@@ -125,9 +125,10 @@
           <div class="job">
             <h3>Web Developer</h3>
             <p>
-              Skilled in front-end and back-end web development, with experience
-              building responsive websites, product management systems, and
-              project management platforms using modern technologies. <br />
+              &nbsp&nbsp&nbsp&nbsp&nbspSkilled in front-end and back-end web
+              development, with experience building responsive websites, product
+              management systems, and project management platforms using modern
+              technologies. <br />
               <b>Key Skills & Responsibilities:</b><br />
               • Developed websites using HTML / CSS and JavaScript for
               responsive and user-friendly interfaces <br />
